Fix Stats Modal: Increase label width to prevent wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -456,7 +456,7 @@ button[class^="btn-"] {
 }
 
 .dist-label {
-  width: 80px;
+  width: 105px;
   font-size: 0.875rem;
   color: var(--color-text);
   text-align: right;
